# slatehub

./: .env-example  .env-sample  .gitignore  LICENSE  Makefile  PRD.md  README.md  SURREALDB_AUTH.md  docker-compose.yml  package-lock.json  package.json
api/: Cargo.toml
api/src/: main.rs  models.rs
api/src/services/: storage.rs
backend/: production_roles_schema.surql
backend/db/: production_roles_schema.surql  roles.json  schema.surql  seed_roles.surql  users.surql
backend/db/files/: .gitkeep
db/: schema.surql
db/data/database.db/: 000009.sst  000016.sst  000018.sst  000019.sst  000025.sst  000026.sst  000033.sst  000034.sst  000041.sst  IDENTITY  MANIFEST-000005  MANIFEST-000030  MANIFEST-000045
db/files/: .gitkeep
db/files/.minio.sys/: format.json
db/files/.minio.sys/tmp/.trash/0ba1c3ae-f31f-4941-81be-e2359c68180f/: xl.meta.bkp
db/files/.minio.sys/tmp/.trash/138e1dd1-5da0-45ba-b9e0-15ec5040a8d3/: xl.meta.bkp
db/files/.minio.sys/tmp/.trash/28891b56-5c40-4f5b-92b2-2c7d409c010e/: xl.meta.bkp
db/files/.minio.sys/tmp/.trash/328d2f9a-4888-4885-8378-a8c592b63fc2/: xl.meta.bkp
db/files/.minio.sys/tmp/.trash/5bb91bf9-9bf5-4183-8c28-9a75c338f7bf/: xl.meta.bkp
db/files/.minio.sys/tmp/.trash/6c88bb7a-8869-4e73-8dbf-4aa1b54bde81/: xl.meta.bkp
db/files/.minio.sys/tmp/.trash/7064ced7-f073-43e5-8f7b-c6c8d6e18fb2/: xl.meta.bkp
db/files/.minio.sys/tmp/.trash/8e8e2b5d-a751-40f0-8012-9e6c3f5c8e0a/: xl.meta.bkp
db/files/.minio.sys/tmp/.trash/9e0745b9-719e-4f8a-b233-6a132bb883e7/: xl.meta.bkp
frontend/web/: package-lock.json
frontend/web/slatehub/: .env-example  AUTH.md  Makefile  README.md  package-lock.json  package.json
frontend/web/slatehub/src/: app.css  app.d.ts  env.d.ts
frontend/web/slatehub/src/routes/: $types.ts  +layout.svelte  +layout.ts  +page.svelte
server/: Cargo.toml  Dockerfile
(+42 files in other folders)
