[package]
name = "slatehub-api"
version = "0.1.0"
edition = "2021"
authors = ["SlateHub Team"]
description = "A minimal, mock version of the SlateHub API"
license = "MIT"

[dependencies]
# Web framework
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time for timestamps
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
