[package]
name = "slatehub-server"
version = "0.1.0"
edition = "2021"
authors = ["SlateHub Team"]
description = "SlateHub a production "
license = "MIT"

[dependencies]
# Web framework
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
headers = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
surrealdb = "1.0.0"
# Pin transitive dependency to avoid Rust 2024 edition requirement
async-graphql-value = "=7.0.16"
base64ct = "=1.7.3"

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dotenvy = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Utilities
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
